# actorcore

./: .flake8  .gitattributes  .gitignore  .isort.cfg  CHANGELOG.md  CHANGELOG.old.rst  CHANGELOG.rst  MANIFEST.in  README.md  setup.cfg  tasks.py
docs/sphinx/: actorcore.rst  actorkeys.rst  changelog.md  conf.py  index.rst  opscore.rst
etc/: actorcore.module  stageManager.cfg
python/actorcore/: Actor.py  CmdrConnection.py  Command.py  CommandLink.py  CommandLinkManager.py  ICC.py  ICCExceptions.py  TestHelper.py  __init__.py  help.py
python/actorcore/Commands/: CoreCmd.py
python/actorcore/utility/: configuration.py  fits.py
python/stagemanager/: __init__.py  stagemanager.py
python/stagemanager/etc/: stageManager.cfg
python/tests/stagemanager/: conftest.py  test_stagemanager.py
tests/stagemanager/: conftest.py  test_stagemanager.py
ups/: actorcore.table
