[metadata]
name = sdss-actorcore
version = 5.0.0-alpha.0
maintainer = José Sánchez-Gallego
maintainer_email = gallegoj@uw.edu
description = SDSS core base actor
url = https://github.com/sdss/actorcore
project_urls =
	Repository = https://github.com/sdss/actorcore
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = actorcore, stagemanager
package_dir =
	= python
install_requires =
	sdss-opscore>=3.0.0
	astropy>=4.0.0
	pyyaml>=5.2
	twisted>=19.10.0
dependency_links =
	opscore @ https://github.com/sdss/opscore/tarball/py3
scripts =
	bin/stageManager

[options.packages.find]
include =
	python.actorcore
	python.stagemanager
