[metadata]
name = sdss-actorcore
version = 5.0.3-alpha.0
maintainer = José Sánchez-Gallego
maintainer_email = gallegoj@uw.edu
description = SDSS core base actor
url = https://github.com/sdss/actorcore
project_urls =
	Repository = https://github.com/sdss/actorcore
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
package_dir =
	= python
install_requires =
	astropy>=4.0.0
	pyyaml>=5.2
	twisted>=19.10.0
	sdss-opscore>=3.0.0
	sdsstools>=0.4.10
scripts =
	bin/stageManager

[options.packages.find]
where = python

[options.extras_require]
dev =
	black
	flake8
	twine
	wheel
	isort
docs =
	Sphinx>=2.2.0
	sphinx_bootstrap_theme>=0.4.12

[options.package_data]
stagemanager =
	etc/*

[isort]
line_length = 88
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	SDSSPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = actorcore
known_sdss_party =
	opscore
	sdsstools
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
max-line-length = 88
per-file-ignores =
	**/__init__.py:E,F
